check unique username

--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -42,9 +42,12 @@
 							<p><b>Name:</b> {{ user.fname }} {{ user.sname }}</p>
 							<p><b>Userid:</b> {{ user.userid }}</p>
 							<p><b>Email:</b> {{ user.email }}</p>
+							<p><a class="btn btn-primary btn-small" href="#" role="button">Edit details &raquo;</a>
+			   	<a class="btn btn-primary btn-small" href="#" role="button">Change password &raquo;</a></p>
 						</td>
 			        </tr>
 			   	</table>
+			   	
 			</div>
 		</div>
 	</body>
