--- a/app/templates/report.html
+++ b/app/templates/report.html
@@ -36,6 +36,7 @@
 				<br>
 					<h4><b>Visit dates:</b> {{ visit.start_date }} - {{ visit.end_date }}</h4>
 					<h4><b>{{ visit.vtype }} Visit ID:</b>  {{ visit.id }}</h4>
+					<h4><b>{{ visit.vtype }} Report Submited by:</b>  {{ report.sname }}, {{ report.fname }}</h4>
 				<br>
 					<div>
 	        			<p style="background-color:white;">{{ report.content }}</p>
