--- a/app/templates/country.html
+++ b/app/templates/country.html
@@ -94,7 +94,7 @@
 				//]]>  
 				 
 			</script>
-			<br><br><a class="btn btn-primary btn-lg" href="#" role="button">View details &raquo;</a>  
+			<br><br><a class="btn btn-primary btn-lg" href="{{ (url_for('mobilitycountry', iso=country.iso)) }}" role="button">View details &raquo;</a>  
         </div>
     </div>
         <div class="row">
