--- a/app/templates/manageusers.html
+++ b/app/templates/manageusers.html
@@ -56,7 +56,11 @@
 			    	<td>{{ u.fname }}</td>
 			    	<td>{{ u.sname }}</td>
 					<td>{{ u.email }}</td>
-					<td><a class="btn btn-primary btn-small" href="#" role="button">Delete user</a>
+					{% if current_user.is_admin() %}
+					<td><a class="btn btn-primary btn-small" href="{{ url_for('adminedituser', id=u.id) }}" role="button">Edit user details</a>
+						<a class="btn btn-primary btn-small" href="{{ url_for('deleteuser', id=u.id) }}" \
+						onclick="return confirm('Delete user {{ u.fname }} {{u.sname }}? This action cannot be undone.')" role="button">Delete user</a></td>
+					{% endif %}
 				</tr>
 			    {% endfor %}
 				</tbody>
